--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -8,23 +8,23 @@ on:
 jobs:
   run-service:
     runs-on: ubuntu-latest
-    container:
-      image: teresaromero/appointment-availability:1.0
     environment:
       name: production
     steps:
-      - name: Run Service
-        # env:
-        #   HLA_PROVINCE_ID: ${ { secrets.HLA_PROVINCE_ID } }
-        #   HLA_HEALTH_CENTRE_ID: ${ { secrets.HLA_HEALTH_CENTRE_ID } }
-        #   HLA_AGREEMENT_ID: ${ { secrets.HLA_AGREEMENT_ID } }
-        #   HLA_BASE_URL: ${ { secrets.HLA_BASE_URL } }
-        #   HLA_FORMAT_ID: ${ { secrets.HLA_FORMAT_ID } }
-        #   HLA_SPECIALTY_ID_LIST: ${ { secrets.HLA_SPECIALTY_ID_LIST } }
-        #   HLA_USERNAME: ${ { secrets.HLA_USERNAME } }
-        #   HLA_PASSWORD: ${ { secrets.HLA_PASSWORD } }
-        #   TG_BOT_APIKEY: ${ { secrets.TG_BOT_APIKEY } }
-        #   TG_BOT_MASTERID: ${ { secrets.TG_BOT_MASTERID } }
+      - name: Pull Docker Image
+        run: docker pull mydockerhubusername/myimagename:latest
+
+      - name: Run Docker Container
         run: |
-          ls -la
-          "./checker"
+          docker run \
+            --env HLA_PROVINCE_ID=${{secrets.HLA_PROVINCE_ID}} \
+            --env HLA_HEALTH_CENTRE_ID=${{secrets.HLA_HEALTH_CENTRE_ID}} \
+            --env HLA_AGREEMENT_ID=${{secrets.HLA_AGREEMENT_ID}} \
+            --env HLA_BASE_URL=${{secrets.HLA_BASE_URL}} \
+            --env HLA_FORMAT_ID=${{secrets.HLA_FORMAT_ID}} \
+            --env HLA_SPECIALTY_ID_LIST=${{secrets.HLA_SPECIALTY_ID_LIST}} \
+            --env HLA_USERNAME=${{secrets.HLA_USERNAME}} \
+            --env HLA_PASSWORD=${{secrets.HLA_PASSWORD}} \
+            --env TG_BOT_APIKEY=${{secrets.TG_BOT_APIKEY}} \
+            --env TG_BOT_MASTERID=${{secrets.TG_BOT_MASTERID}} \
+            teresaromero/appointment-availability:1.0
