Update workflow to schedule daily runs at 10 AM Madrid time
Signed-off-by: Teresa Romero <romero.teresa@protonmail.com>

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -1,12 +1,8 @@
 name: Run Service Every Day
 
 on:
-  # debug push
-  push:
-    branches:
-      - main
-  # schedule:
-  #   - cron: "0 9 * * *" # 10 AM Madrid time (CET/UTC+1) equivalent in UTC
+  schedule:
+    - cron: "0 9 * * *" # 10 AM Madrid time (CET/UTC+1) equivalent in UTC
   workflow_dispatch:
 
 jobs:
