--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -2,7 +2,8 @@ name: Run Service Every Day
 
 on:
   schedule:
-    - cron: "0 9 * * *" # 10 AM Madrid time (CET/UTC+1) equivalent in UTC
+    - cron: "*/10 * * * *" # Every 10 minutes
+   # - cron: "0 9 * * *" # 10 AM Madrid time (CET/UTC+1) equivalent in UTC
   workflow_dispatch:
 
 jobs:
