--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
+      "cwd": "${workspaceFolder}",
       "program": "${workspaceFolder}/cmd/checker/main.go",
       "envFile": "${workspaceFolder}/.env"
     }
